@@ -1,3 +1,7 @@
+2003-10-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/alpha/elf-reloc-8.d: Updated.
+
 2003-10-10  Dave Brolley  <brolley@redhat.com>
 
 	* gas/frv/allinsn.s: Use preoperly aligned registers.
